<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_rect"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.softonetech.learnenglish.DramaDetailActivity"
    tools:showIn="@layout/activity_drama_detail">

    <LinearLayout
        android:id="@+id/ly_musicPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <!--<ImageButton
            android:id="@+id/imageButton_mediaPlayPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/mediaPlay"
            app:srcCompat="@android:drawable/ic_media_play" />-->

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/banner_ad_unit_id" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:text="@string/time" />

            <SeekBar
                android:id="@+id/seekBar_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="10"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView_endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:text="@string/time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton_mediaBackward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/mediaBackward"
                app:srcCompat="@android:drawable/ic_media_rew" />

            <ImageButton
                android:id="@+id/imageButton_mediaPlayPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/mediaPlay"
                app:srcCompat="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/imageButton_mediaForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/mediaForward"
                app:srcCompat="@android:drawable/ic_media_ff" />
        </LinearLayout>

    </LinearLayout>


    <include layout="@layout/content_drama_detail" />


</LinearLayout>